<resources>
    <string name="app_name">微聚</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--警告栏-->
    <string name="alert">警告</string>
    <string name="info">提示</string>
    <string name="error">错误</string>
...
    <string name="email_error">邮箱格式错误</string>
    <string name="bad_credential">账号或密码错误</string>

    <!--主界面-->
    <string name="welcome_back">欢迎回来</string>
    <string name="continue_task">你还有正在进行中的任务，是否继续？</string>
    <string name="continue_">继续</string>
    <string name="view_details">查看详情</string>
    <string name="annotation_task">标注任务</string>
    <string name="collection_task">采集任务</string>

    <!--任务详情页-->
    <string name="task_details">任务详情</string>
...
